--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -42,16 +42,16 @@ nginx_vhosts:
         content: |
           proxy_pass http://backend;
           include proxy_params;
-    # ssl:
-    #   certificate: /var/lib/dehydrated/certs/{{ inventory_hostname }}/fullchain.pem
-    #   certificate_key: /var/lib/dehydrated/certs/{{ inventory_hostname }}/privkey.pem
-    #   trusted_certificate: /var/lib/dehydrated/certs/{{ inventory_hostname }}/chain.pem
-    #   session_timeout: "1d"
-    #   session_cache: "shared:SSL:10m"
-    #   session_tickets: false
-    #   # hsts: "max-age={{ 60 * 60 * 24 * (365 / 2) }}; includeSubDomains;"
-    #   stapling: true
-    #   stapling_verify: true
+    ssl:
+      certificate: /var/lib/dehydrated/certs/{{ inventory_hostname }}/fullchain.pem
+      certificate_key: /var/lib/dehydrated/certs/{{ inventory_hostname }}/privkey.pem
+      trusted_certificate: /var/lib/dehydrated/certs/{{ inventory_hostname }}/chain.pem
+      session_timeout: "1d"
+      session_cache: "shared:SSL:10m"
+      session_tickets: false
+      # hsts: "max-age={{ 60 * 60 * 24 * (365 / 2) }};"
+      stapling: true
+      stapling_verify: true
 
 redmine_cfg:
   default:
